--- a/src/design/_styles.scss
+++ b/src/design/_styles.scss
@@ -207,3 +207,12 @@ select.invalid {
     color: #fff;
   }
 }
+
+label.input {
+  background-color: #e5e5e5;
+  border: 1px solid #ccc;
+}
+
+p.comment {
+  margin: 8px;
+}
